# swc-minifier

./: Cargo.toml  swc-minifier.rs
.github/workflows/: build.yaml
