[package]
name = 'swc-minifier'
version = '0.2.1'
edition = '2021'
license = 'AGPL-3.0-or-later'

[dependencies]
anyhow = '1.0.75'

swc_ecma_ast = '*'
swc_ecma_transforms_base = '*'
swc_common = '*'
swc_ecma_visit = '*'
swc_ecma_codegen = '*'

serde_json = '1.0.105'
serde_derive = '*'
serde = '*'

lexopt = '0.3.0'

[dependencies.const-str]
version = '0.5.3'
default-features = false
features = []

[dependencies.swc_ecma_minifier]
version = '0.185.4'
default-features = false
features = []

[dependencies.swc_ecma_parser]
version = '0.138.0'
default_features = false
features = []

[[bin]]
name = 'swc-minifier'
path = 'swc-minifier.rs'
